<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".authentication.VerifyPhoneActivity"
    android:background="@color/black">




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/wait_for_the_OTP"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/otp_will_be_sent_through_messages_and_will_also_be_automatically_detected_if_fails_to_detect_enter_manually"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView1"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:digits="0123456789"
        android:hint="@string/enter_code"
        android:maxLength="6"
        android:gravity="center"
        android:background="@drawable/editt"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/applyedit"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSignIn"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>