<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.phone_login_activity"
    android:background="@color/black"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/flu"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_marginTop="30dp">

        <ImageButton
            android:layout_width="50dp"
            android:id="@+id/AdminBack"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="-100dp"
            android:background="@color/flu"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:text="@string/admin"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />



    </androidx.appcompat.widget.Toolbar>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/sup1"
        android:layout_marginTop="40dp"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        >





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">







        <EditText
            android:layout_weight="1"
            android:id="@+id/EditUser"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:hint="@string/username"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/editt"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:inputType="text"


            />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">







            <EditText
                android:layout_weight="1"
                android:id="@+id/EditPass"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:hint="@string/password1"
                android:maxLength="15"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/editt"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:inputType="textPassword"


                />
        </LinearLayout>









    </LinearLayout>


    <Button

        android:id="@+id/buttonContinue"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="130dp"
        android:background="@drawable/adminbut"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"

        />


</LinearLayout>